Added widget component

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       html {
         font-size: 62.5%;
       }
+
+      /* body {
+        overflow: hidden;
+      } */
     </style>
     <title>React App</title>
   </head>
